<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_lift_scheduler</name>
  <version>0.0.1</version>
  <description>Framework for prioritizing lifts</description>
  <maintainer email="nicholasgan@openrobotics.org">Nicholas Gan</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rmf_lift_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
